--- a/eventos.html
+++ b/eventos.html
@@ -98,7 +98,7 @@
      data-event-id="2001" data-local-id="32">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=21" alt="Pierce The Veil">
+      <img src="assets/pierce_the_veil.jpg" alt="Pierce The Veil">
     </div>
 
     <div class="info">
@@ -117,7 +117,7 @@
      data-event-id="2002" data-local-id="32">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=22" alt="WME Awards 2025">
+      <img src="assets/wme-awards-2025.jpg" alt="WME Awards 2025">
     </div>
 
     <div class="info">
@@ -136,7 +136,7 @@
      data-event-id="2003" data-local-id="77">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=23" alt="Festival de Verão RJ">
+      <img src="assets/Festival_do_Rio.png" alt="Festival de Verão RJ">
     </div>
 
     <div class="info">
@@ -155,7 +155,7 @@
      data-event-id="2004" data-local-id="77">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=24" alt="Réveillon Copacabana">
+      <img src="assets/capacabana.webp" alt="Réveillon Copacabana">
     </div>
 
     <div class="info">
@@ -174,7 +174,7 @@
      data-event-id="2005" data-local-id="55">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=25" alt="Samba Prime 2025">
+      <img src="assets/samba_prime.png" alt="Samba Prime 2025">
     </div>
 
     <div class="info">
@@ -192,8 +192,8 @@
      data-start="2025-12-18" data-end="2025-12-18"
      data-event-id="2006" data-local-id="55">
 
-    <div class="img-container"
-      <img src="https://picsum.photos/640/400?random=26" alt="Expovet 2025">
+    <div class="img-container">
+      <img src="assets/expovet.png" alt="Expovet 2025">
     </div>
 
     <div class="info">
@@ -212,7 +212,7 @@
      data-event-id="2007" data-local-id="90">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=27" alt="Disney Celebra Natal">
+      <img src="assets/Disney.png" alt="Disney Celebra Natal">
     </div>
 
     <div class="info">
@@ -231,7 +231,7 @@
      data-event-id="2008" data-local-id="90">
 
     <div class="img-container">
-      <img src="https://picsum.photos/640/400?random=28" alt="Boris Brejcha">
+      <img src="assets/boris_brejcha.jpg" alt="Boris Brejcha">
     </div>
 
     <div class="info">
