--- a/eventos1.html
+++ b/eventos1.html
@@ -92,7 +92,7 @@
      data-event-id="3001" data-local-id="sp01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Guarulhos_International_Airport_T3.jpg"
+      <img src="assets/guarulhos.jpg"
            alt="Aeroporto Internacional de Guarulhos">
     </div>
 
@@ -112,7 +112,7 @@
      data-event-id="3002" data-local-id="sp02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Aeroporto_de_Congonhas.jpg"
+      <img src="assets/Congonhas.jpg"
            alt="Aeroporto de Congonhas">
     </div>
 
@@ -132,7 +132,7 @@
      data-event-id="3003" data-local-id="rj01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/Galeao_airport_terminal_2.jpg"
+      <img src="assets/aeropuerto-rio.jpg"
            alt="Aeroporto Internacional do Galeão">
     </div>
 
@@ -152,7 +152,7 @@
      data-event-id="3004" data-local-id="rj02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6f/Aeroporto_Santos_Dumont_RJ.jpg"
+      <img src="assets/santos_dumont.jpg"
            alt="Aeroporto Santos Dumont">
     </div>
 
@@ -172,7 +172,7 @@
      data-event-id="3005" data-local-id="bh01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/0b/Aeroporto_Internacional_de_Confins.jpg"
+      <img src="assets/Aeroporto-Confins.png"
            alt="Aeroporto Internacional de Confins">
     </div>
 
@@ -192,7 +192,7 @@
      data-event-id="3006" data-local-id="bh02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Aeroporto_da_Pampulha.jpg"
+      <img src="assets/pampulha.webp"
            alt="Aeroporto da Pampulha">
     </div>
 
@@ -212,7 +212,7 @@
      data-event-id="3007" data-local-id="cur01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Aeroporto_Afonso_Pena.jpg"
+      <img src="assets/afonso_pena.jpg"
            alt="Aeroporto Internacional Afonso Pena">
     </div>
 
@@ -232,7 +232,7 @@
      data-event-id="3008" data-local-id="cur02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Aeroporto_do_Bacacheri.jpg"
+      <img src="assets/aeroporto-bacacheri.jpg"
            alt="Aeroporto do Bacacheri">
     </div>
 
