--- a/eventos2.html
+++ b/eventos2.html
@@ -93,7 +93,7 @@
      data-event-id="2001" data-local-id="sp01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Parque_Ibirapuera_SP.jpg"
+      <img src="assets/Parque-do-Ibirapuera.jpg"
            alt="Parque Ibirapuera">
     </div>
 
@@ -113,7 +113,7 @@
      data-event-id="2002" data-local-id="sp02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Parque_Villa-Lobos_SP.jpg"
+      <img src="assets/Villar_lobos.png"
            alt="Parque Villa-Lobos">
     </div>
 
@@ -133,7 +133,7 @@
      data-event-id="2003" data-local-id="rj01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5d/Parque_do_Flamengo_RJ.jpg"
+      <img src="assets/pqueflamengo.jpg"
            alt="Parque do Flamengo">
     </div>
 
@@ -153,7 +153,7 @@
      data-event-id="2004" data-local-id="rj02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Parque_Nacional_da_Tijuca.jpg"
+      <img src="assets/nacional-da-tijuca.jpg"
            alt="Parque Nacional da Tijuca">
     </div>
 
@@ -173,7 +173,7 @@
      data-event-id="2005" data-local-id="bh01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/9c/Parque_das_Mangabeiras_BH.jpg"
+      <img src="assets/Parque-das-Mangabeiras.png"
            alt="Parque das Mangabeiras">
     </div>
 
@@ -193,7 +193,7 @@
      data-event-id="2006" data-local-id="bh02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/Parque_Municipal_BH.jpg"
+      <img src="assets/parque-municipal-Americo.jpg"
            alt="Parque Municipal Américo Renné Giannetti">
     </div>
 
@@ -213,7 +213,7 @@
      data-event-id="2007" data-local-id="cur01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Parque_Barigui_Curitiba.jpg"
+      <img src="assets/parque_Barigui.jpg"
            alt="Parque Barigui">
     </div>
 
@@ -233,7 +233,7 @@
      data-event-id="2008" data-local-id="cur02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/42/Parque_Tangua_Curitiba.jpg"
+      <img src="assets/parque-tangua.jpg"
            alt="Parque Tanguá">
     </div>
 
