--- a/eventos3.html
+++ b/eventos3.html
@@ -93,7 +93,7 @@
      data-event-id="4001" data-local-id="sp-shop-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/Shopping_Ibirapuera_SP.jpg"
+      <img src="assets/shopping-ibirapuera.jpg"
            alt="Shopping Ibirapuera">
     </div>
 
@@ -113,7 +113,7 @@
      data-event-id="4002" data-local-id="sp-shop-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/5b/Shopping_Morumbi_SP.jpg"
+      <img src="assets/morumbi-shopping.jpg"
            alt="Shopping Morumbi">
     </div>
 
@@ -133,7 +133,7 @@
      data-event-id="4003" data-local-id="rj-shop-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/1/16/Shopping_Rio_Sul.jpg"
+      <img src="assets/Shopping-RioSul.jpg"
            alt="Shopping Rio Sul">
     </div>
 
@@ -153,7 +153,7 @@
      data-event-id="4004" data-local-id="rj-shop-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Barra_Shopping_RJ.jpg"
+      <img src="assets/BarraShopping.png"
            alt="Barra Shopping">
     </div>
 
@@ -173,7 +173,7 @@
      data-event-id="4005" data-local-id="bh-shop-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/3/34/Shopping_Del_Rey_BH.jpg"
+      <img src="assets/shopping-del-rey.jpeg"
            alt="Shopping Del Rey">
     </div>
 
@@ -193,7 +193,7 @@
      data-event-id="4006" data-local-id="bh-shop-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7a/P%C3%A1tio_Savassi_BH.jpg"
+      <img src="assets/patio-savassi.jpg"
            alt="Pátio Savassi">
     </div>
 
@@ -213,7 +213,7 @@
      data-event-id="4007" data-local-id="cur-shop-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Shopping_Estacao_Curitiba.jpg"
+      <img src="assets/shopping-estacao.jpg"
            alt="Shopping Estação">
     </div>
 
@@ -233,7 +233,7 @@
      data-event-id="4008" data-local-id="cur-shop-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/55/ParkShoppingBarigui.jpg"
+      <img src="assets/shopping_barigui.jpg"
            alt="ParkShopping Barigüi">
     </div>
 
