--- a/eventos4.html
+++ b/eventos4.html
@@ -93,7 +93,7 @@
      data-event-id="5001" data-local-id="sp-est-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/2/2e/Allianz_Parque_2019.jpg"
+      <img src="assets/ColdPlay.png"
            alt="Show no Allianz Parque">
     </div>
 
@@ -113,7 +113,7 @@
      data-event-id="5002" data-local-id="sp-est-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Morumbi_Stadium_2022.jpg"
+      <img src="assets/U2.jpg"
            alt="Show no Estádio do Morumbi">
     </div>
 
@@ -133,7 +133,7 @@
      data-event-id="5003" data-local-id="rj-est-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Estadio_Maracana_Rio.jpg"
+      <img src="assets/foo_fighters.jpg"
            alt="Show no Maracanã">
     </div>
 
@@ -153,7 +153,7 @@
      data-event-id="5004" data-local-id="rj-est-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/9/95/Engenh%C3%A3o_Rio.jpg"
+      <img src="assets/Bruno_mars.png"
            alt="Show no Estádio Nilton Santos">
     </div>
 
@@ -173,7 +173,7 @@
      data-event-id="5005" data-local-id="bh-est-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/Mineirao_BH.jpg"
+      <img src="assets/iron_maiden.jpg"
            alt="Show no Mineirão">
     </div>
 
@@ -193,7 +193,7 @@
      data-event-id="5006" data-local-id="bh-est-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/7/7b/Mineirinho_BH.jpg"
+      <img src="assets/ivete_sangalo.jpg"
            alt="Show no Mineirinho">
     </div>
 
@@ -213,7 +213,7 @@
      data-event-id="5007" data-local-id="cur-est-01">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/8/88/Arena_da_Baixada_Curitiba.jpg"
+      <img src="assets/imaginedragons.jpg"
            alt="Show na Arena da Baixada">
     </div>
 
@@ -233,7 +233,7 @@
      data-event-id="5008" data-local-id="cur-est-02">
 
     <div class="img-container">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Couto_Pereira_Curitiba.jpg"
+      <img src="assets/Guns_N_Roses.jpg"
            alt="Show no Estádio Couto Pereira">
     </div>
 
