--- a/cadastro.html
+++ b/cadastro.html
@@ -56,7 +56,7 @@
 
           <div class="form-group">
             <label for="modelo">Modelo</label>
-            <input readonly name="Modelo" type="text" id="modelo" placeholder="Cor do veículo" value="CROSSFOX" class="modelo-cor-desativado" required />
+            <input readonly name="Modelo" type="text" id="modelo" placeholder="Cor do veículo" class="modelo-cor-desativado" required />
           </div>
 
           <div class="form-group">
