--- a/cadastro.html
+++ b/cadastro.html
@@ -78,8 +78,8 @@
 
 
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-  <script src="/JS/cadastro.js"></script>
-  <script src="/JS/API_KEY.js"></script>
+  <script src="JS/cadastro.js"></script>
+  <script src="JS/API_KEY.js"></script>
 </body>
 
 </html>
