--- a/profile.html
+++ b/profile.html
@@ -6,7 +6,7 @@
   <title>Meu Perfil - Self Park</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-  <link rel="stylesheet" href="/CSS/profile.css">
+  <link rel="stylesheet" href="CSS/profile.css">
   
 </head>
 <body onload="buscarVeiculoPorPlaca()">
@@ -84,7 +84,7 @@
   </section>
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="/JS/profile.js"></script>
-<script src="/JS/API_KEY.js"></script>
+<script src="JS/profile.js"></script>
+<script src="JS/API_KEY.js"></script>
 </body>
 </html>
