--- a/ex.html
+++ b/ex.html
@@ -375,8 +375,7 @@
             <div class="loc" aria-hidden="true">
                 <div class="pin">P</div>
                 <div>
-                    <div style="font-weight:var(--fw-700);font-size:16px">R. Capivari, 217</div>
-                    <div style="color:var(--muted-light);font-size:14px">217 - Pacaembu, São Paulo</div>
+                    
                 </div>
             </div>
         </div>
@@ -411,7 +410,7 @@
             <div class="discount-card" id="dporto" role="listitem" tabindex="0" aria-pressed="false" title="Ativar Desconto Porto Seguro -10%">
                 <div class="discount-logo">PS</div>
                 <div>
-                    <div style="font-weight:var(--fw-600)">Porto Seguro</div>
+                    <div style="font-weight:var(--fw-600)">Self Park</div>
                     <div class="info-label">Válido para apólices</div>
                 </div>
                 <div class="discount-percent">-10%</div>
