--- a/pagamento.html
+++ b/pagamento.html
@@ -3,14 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Checkout Premium</title>
-
+    <title>Pagamento Reserva</title>
+    <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link rel="stylesheet" href="CSS/pagamento.css" />
 </head>
 
 <body>
+
+    <header class="navbar" id="navbar">
+    <div class="nav-container">
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
+      <nav class="nav-links">
+        <button class="nav-btn" id="reservarBtn"><a href="reservas.html" style="color:inherit;text-decoration:none;">Reservar</a></button>
+        <button class="nav-btn" id="loginBtn"><a href="login.html" style="color:inherit;text-decoration:none;">Login</a></button>
+        <button class="nav-btn" id="cadastroBtn"><a href="cadastro.html" style="color:inherit;text-decoration:none;">Cadastre-se</a></button>
+      </nav>
+    </div>
+  </header>
 
 <div class="container">
 
