--- a/ex.html
+++ b/ex.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <title>Reserva Estacionamento Premium (Refatorado)</title>
+      <link rel="shortcut icon" href="assets/carrinhovrumvrum.png">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <style>
         /* 🎨 Design System: Cores e Variáveis */
