--- a/cadastro.html
+++ b/cadastro.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Registro</title>
   <link rel="stylesheet" href="CSS/cadastro.css" />
-  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+  <link rel="shortcut icon" href="assets/carrinhovrumvrum.png">
 
 </head>
 
