--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+  <link rel="shortcut icon" href="assets/carrinhovrumvrum.png">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="CSS/login.css">
   <style>
