--- a/reservas.html
+++ b/reservas.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Buscar Local ou Evento</title>
   <link rel="stylesheet" href="CSS/reservas.css">
-  <link rel="shortcut icon" href="assets/logoAZUL_letraBRANCA.png">
+  <link rel="shortcut icon" href="assets/carrinhovrumvrum.png">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   
