--- a/profile.html
+++ b/profile.html
@@ -12,11 +12,13 @@
 </head>
 <body onload="buscarVeiculoPorPlaca()">
 
-  <nav class="navbar">
+  <header class="navbar" id="navbar">
     <div class="nav-container">
-      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo Self Park" class="nav-logo" onclick="window.location.href='index.html'">
+      <img src="assets/logoAZUL_letraBRANCA.png" alt="Logo" class="nav-logo" onclick="window.location.href='index.html'">
+      <nav class="nav-links">
+      </nav>
     </div>
-  </nav>
+  </header>
 
   <section class="profile-section">
     <div class="profile-container">
