--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <html>
+
 
   <!-- NAVBAR -->
   <header class="navbar" id="navbar">
@@ -268,6 +268,15 @@
 
 </footer>
 
+<script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+
+<script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+</script>
+    <script src="https://cdn.jsdelivr.net/gh/PrabothCharith/accessibility-plugin@main/accessibility-menu.min.js"></script>
+
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=yyJkkDtK"></script>
+
 <script>
 document.addEventListener("mousemove", (e) => {
   const footer = document.querySelector(".footer");
@@ -381,11 +390,31 @@ document.addEventListener('DOMContentLoaded', () => {
 
 
 
-
+<div vw class="enabled">
+    <div vw-access-button class="active"></div>
+    <div vw-plugin-wrapper>
+      <div class="vw-plugin-top-wrapper"></div>
+    </div>
+  </div>
 
 
   <script src="JS/index.js">
+
+    
   </script>
+
+ <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+  <script>
+    new window.VLibras.Widget('https://vlibras.gov.br/app');
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/gh/PrabothCharith/accessibility-plugin@main/accessibility-menu.min.js"></script>
+
+  <script src="https://code.responsivevoice.org/responsivevoice.js?key=yyJkkDtK"></script>
+
+
+  </body>
+  </html>
 
 
 
